# lox

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.circleci/: Dockerfile  README.md  config.yml
.github/workflows/: ci.yml
benches/: io_ply.rs  io_stl.rs  mesh.rs
benches/profiling/: Cargo.toml  README.md
benches/profiling/src/: lib.rs
benches/util/io/: mod.rs  ply.rs  stl.rs
ci/: check-basic-style.sh
examples/: bounding_sphere.rs  dijkstra.rs  house.rs  macro.rs  main.rs  smooth.rs  subdivision.rs
fev/: Cargo.toml
fev-core/: Cargo.toml
fev-core/src/: build.rs  handle.rs  lib.rs  map.rs  prop.rs  refs.rs
fev-core/src/map/: aliases.rs  mod.rs
fev-impls/: Cargo.toml
fev-impls/src/: lib.rs
fev-impls/src/sv/: mod.rs
fev-io/: Cargo.toml
fev-io/src/: lib.rs  ser.rs
fev-io/src/parse/: buf.rs  mod.rs
fev-io/src/ply/: mod.rs  write.rs
fev-io/src/stl/: mod.rs  read.rs  write.rs
fev-map/: Cargo.toml
fev-map/src/: aliases.rs  boo.rs  fn_map.rs  foreign_impls.rs  gat.rs  hash_map.rs  lib.rs  mesh_map.rs  vec_map.rs
fev-maps/: Cargo.toml
fev-maps/src/: lib.rs  vec_map.rs
fev/examples/: simple.rs
fev/src/: lib.rs
fuzz/: .gitignore  Cargo.toml  README.md
fuzz/corpus/ply-parser/: .gitignore  triangle_bbe.ply  triangle_with_comments_ble.ply
fuzz/corpus/stl-parser/: .gitignore
fuzz/fuzz_targets/: ply-parser.rs  stl-parser.rs
lox-cli/: Cargo.toml
lox-cli/src/: args.rs  main.rs  opt.rs  ui.rs
lox-cli/src/commands/: convert.rs  info.rs  mod.rs
lox-macros/: Cargo.toml
lox-macros/src/: derives.rs  lib.rs  mesh.rs  util.rs
lox-macros/src/derives/: input.rs  mem_sink.rs  mem_source.rs  mod.rs
loxi/: Cargo.toml
loxi/src/: args.rs
loxi/src/commands/: info.rs
old_code/: README.md
old_code/benches/: mesh.rs
old_code/benches/profiling/: Cargo.toml
old_code/benches/profiling/src/: lib.rs
old_code/benches/util/io/: ply.rs
old_code/examples/: dijkstra.rs  dummy.rs  smooth.rs
old_code/fuzz/: Cargo.toml
old_code/fuzz/corpus/ply-parser/: triangle_ble.ply  triangle_with_comments_bbe.ply  triangle_with_extra_props_ble.ply
old_code/fuzz/corpus/stl-parser/: .gitignore  flat-ascii.stl  flat-binary.stl
old_code/fuzz/fuzz_targets/: ply-parser.rs
old_code/lox-macros/src/: util.rs
old_code/lox-macros/src/derives/: mod.rs
old_code/loxi/: Cargo.toml
old_code/loxi/src/: args.rs  main.rs  ui.rs  util.rs
old_code/loxi/src/commands/: convert.rs
old_code/src/: lib.rs
old_code/src/core/: face_delegate.rs
old_code/src/fat/: any.rs  mod.rs
old_code/src/io/: mod.rs  tests.rs  util.rs
old_code/src/io/ply/: mod.rs  raw.rs  read.rs  tests.rs
old_code/src/io/ply/test_files/: half_cube_with_normals_bbe.ply  no_faces_ble.ply  (+8 more)
old_code/src/io/stl/: mod.rs  read.rs  write.rs
old_code/src/shape/: mod.rs
old_code/tests/files/ply/: sphere_ascii.ply  sphere_bbe.ply  sphere_ble.ply  sphere_vnormals_bbe.ply
old_code/tests/files/stl/: sphere_ascii.stl  sphere_binary.stl
src/: cast.rs  fat.rs  handle.rs  lib.rs  macros.rs  map.rs  maps.rs  math.rs  mesh.rs  prelude.rs  prop.rs  refs.rs  shape.rs  shape2.rs  test_utils.rs  traits.rs  util.rs
src/algo/: bounding.rs  mod.rs  subdivision.rs
src/core/: checked.rs  face_delegate.rs  mod.rs  shared_vertex.rs  traits.rs
src/core/directed_edge/: adj.rs  mod.rs  tests.rs
src/core/half_edge/: adj.rs  mod.rs  tests.rs
src/core/shared_vertex/: mod.rs
src/core/tests/: mod.rs  util.rs
src/ds/: checked.rs  face_delegate.rs  half_edge.rs  linked_face.rs  mod.rs  shared_vertex.rs  tests.rs  util.rs
src/ds/directed_edge/: adj.rs  mod.rs  tests.rs
src/ds/half_edge/: adj.rs  mod.rs  tests.rs
src/ds/tests/: mod.rs  util.rs
src/fat/: any.rs  mod.rs
src/impls/: fv.rs  hem.rs  mod.rs
src/io/: mod.rs  ply.rs  ply2.rs  tests.rs  util.rs
src/io/parse/: buf.rs  mod.rs
src/io/ply/: info.rs  mod.rs  raw.rs  read.rs  tests.rs  write.rs
src/io/ply/test_files/: half_cube_with_normals_ascii.ply  half_cube_with_normals_ble.ply  mesh_with_removed_elements.ply  no_faces_ascii.ply  no_faces_bbe.ply  three_tris_all_props_ble.ply  three_tris_many_props_ascii.ply  triangle_ascii.ply  triangle_with_comments_ascii.ply  triangle_with_extra_vertex_props_ascii.ply  unusual_order_ble.ply
src/io/stl/: mod.rs  read.rs  tests.rs  write.rs
src/io/stl/test_files/: cube_ascii.stl  cube_binary.stl  triangle_binary.stl  triangle_binary_custom_normals.stl
src/map/: adaptors.rs  aliases.rs  boo.rs  const_map.rs  dense.rs  fn_map.rs  hash_map.rs  mod.rs  set.rs  sparse.rs  special_maps.rs  tests.rs  tiny.rs  tiny_map.rs  util.rs  vec_map.rs
src/shape/: mod.rs
src/test_utils/: io.rs  mod.rs
src/traits/: adj.rs  marker.rs  mod.rs
src/util/: empty.rs  list.rs  mod.rs  num.rs  prop.rs
tests/: derive_empty.rs  derive_mem_sink.rs  mesh_macro.rs
tests/files/ply/: sphere_vnormals_ascii.ply  sphere_vnormals_ble.ply
tools/convert/: Cargo.toml
tools/convert/src/: main.rs  opt.rs  util.rs
(+3 files in other folders)
