[package]
name = "lox"
version = "0.1.0"
authors = ["Lukas Kalbertodt <lukas.kalbertodt@gmail.com>"]
edition = "2021"


[features]
large-handle = []

[dependencies]
ahash = "0.7"
leer = { version = "0.1.1", features = ["derive"] }
lina = { version = "0.1.4", default-features = false }
lox-macros = { path = "lox-macros" }
num-traits = "0.2"
optional = "0.5"
smallvec = { version = "1.4.0", features = ["union"] }
stable-vec = "0.4"
typebool = "0.1.0"

[dev-dependencies]
color-backtrace = "0.5"
criterion = { version = "0.3", features = ["real_blackbox"] }
paste = "1"
