[package]
name = "lox"
version = "0.1.0"
authors = ["Lukas Kalbertodt <lukas.kalbertodt@gmail.com>"]
edition = "2021"


[features]
large-handle = []

[dependencies]
ahash = "0.8.3"
leer = { version = "0.1.1", features = ["derive"] }
lina = { version = "0.1.4", default-features = false }
lox-macros = { path = "lox-macros" }
num-traits = "0.2.15"
optional = "0.5"
smallvec = { version = "1.10.0", features = ["union"] }
stable-vec = "0.4"
typebool = "0.1.0"
