[package]
name = "lox"
version = "0.1.0"
authors = ["Lukas Kalbertodt <lukas.kalbertodt@gmail.com>"]
edition = "2021"

description = """
Fast polygon mesh library with different data structures and traits to abstract over those.
"""
documentation = "https://docs.rs/lox/"
repository = "https://github.com/LukasKalbertodt/lox/"
readme = "README.md"
license = "MIT/Apache-2.0"

keywords = ["mesh", "polygon", "half-edge-mesh", "geometry"]
categories = ["graphics", "data-structures", "science"]
exclude = [".github", "old_code", "stuff"]


[features]
large-handle = []

[dependencies]
ahash = "0.8.3"
leer = { version = "0.1.1", features = ["derive"] }
lina = { version = "0.1.4", default-features = false }
lox-macros = { version = "=0.0.1", path = "lox-macros" }
num-traits = "0.2.15"
optional = "0.5"
smallvec = { version = "1.10.0", features = ["union"] }
stable-vec = "0.4"
typebool = "0.1.0"
