[package]
name = "fev-core"
version = "0.1.0"
authors = ["Lukas Kalbertodt <lukas.kalbertodt@gmail.com>"]

[features]
default = ["cgmath"]

[dependencies]
auto_impl = { git = "https://github.com/LukasKalbertodt/auto_impl", branch = "rewrite" }
cgmath = { version = "0.16", optional = true }
num-traits = "0.2"
