[package]
name = "fev-io"
version = "0.1.0"
authors = ["Lukas Kalbertodt <lukas.kalbertodt@gmail.com>"]

[dependencies]
auto_impl = { git = "https://github.com/LukasKalbertodt/auto_impl", branch = "rewrite" }
fev-core = { path = "../fev-core" }
fev-map = { path = "../fev-map" }
byteorder = "1.2"
failure = "0.1.1"
failure_derive = "0.1.1"
frunk = "0.2"
splop = "0.2"
