cargo-features = ["edition"]

[package]
name = "fev-io"
version = "0.1.0"
authors = ["Lukas Kalbertodt <lukas.kalbertodt@gmail.com>"]
edition = "2018"

[dependencies]
auto_impl = { git = "https://github.com/LukasKalbertodt/auto_impl", branch = "rewrite" }
byteorder = "1.2"
cgmath = "0.16"
failure = "0.1.1"
failure_derive = "0.1.1"
fev-core = { path = "../fev-core" }
fev-map = { path = "../fev-map" }
frunk = "0.2"
splop = "0.2"
