cargo-features = ["edition"]

[package]
name = "fev-map"
version = "0.1.0"
authors = ["Lukas Kalbertodt <lukas.kalbertodt@gmail.com>"]
edition = "2018"

[dependencies]
fev-core = { path = "../fev-core" }
stable-vec = { git = "https://github.com/LukasKalbertodt/stable-vec" }
auto_impl = { git = "https://github.com/KodrAus/auto_impl" }
