[package]
name = "lox-fuzz"
version = "0.0.1"
authors = ["Lukas Kalbertodt <lukas.kalbertodt@gmail.com>"]
publish = false
edition = "2018"

[package.metadata]
cargo-fuzz = true

[dependencies.lox]
path = ".."
[dependencies.libfuzzer-sys]
git = "https://github.com/rust-fuzz/libfuzzer-sys.git"

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "stl-parser"
path = "fuzz_targets/stl-parser.rs"
