[package]
name = "lox-macros"
version = "0.0.1"
authors = ["Lukas Kalbertodt <lukas.kalbertodt@gmail.com>"]
edition = "2021"

description = """
Helper crate for `lox`. Please see the docs of `lox` for more information. Do
not use this crate directly, API stability is not guaranteed!
"""
repository = "https://github.com/LukasKalbertodt/lox/"
license = "MIT/Apache-2.0"


[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
